[package]
name = "ffmpeg-stringify"
version = "0.2.1"
edition = "2021"
authors = ["Emiliyan Gospodinov"]
license = "CC-BY-NC-4.0"

description = "A small library that allows creation of ffmpeg command string via rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map-macro = "0.2.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
